--- a/Views/College/Index.cshtml
+++ b/Views/College/Index.cshtml
@@ -33,6 +33,7 @@
                         <thead>
                             <tr>
                                 <th><label asp-for="CollegeID" class="control-label"></label></th>
+                                <th>Upload</th>
                                 <th>Edit</th>
                                 <th>Delete</th>
                                 <th><label asp-for="CollegeCode" class="control-label"></label></th>
