--- a/Views/StudentProfile/_AddEditStudentProfile.cshtml
+++ b/Views/StudentProfile/_AddEditStudentProfile.cshtml
@@ -1,8 +1,11 @@
-@model StudentProfile
+﻿@model StudentProfile
 
 <form asp-action="AddEditStudentProfile" class="needs-validation" role="form">
     @await Html.PartialAsync("_ModalHeader", new ModalHeader { Heading = $"{((Model.StudentID == 0) ? "Add" : "Edit")} StudentProfile" })
     <input type="hidden" asp-for="StudentID" />
+    <input type="hidden" asp-for="FileStamp" />
+    <input type="hidden" asp-for="Picture" />
+
     <div class="modal-body form-horizontal">
         <div class="form-group row">
             <label asp-for="LastName" class="control-label col-md-2"></label>
@@ -33,11 +36,19 @@
             </div>
         </div>
         <div class="form-group row">
+
+
             <label asp-for="BirthDate" class="control-label col-md-2"></label>
-            <div class="col-md-3">
-                <input asp-for="BirthDate" class="form-control" required />
+            <div class="col-md-4">
+                <div class="input-group date" data-provide="datepicker">
+                    <input name="BirthDate" id="RecognizeDate" value="@Model.BirthDate.ToShortDateString()" required class="datepicker form-control" />
+                    <div class="input-group-addon">
+                        <span class="glyphicon glyphicon-th"></span>
+                    </div>
+                </div>
                 <span asp-validation-for="BirthDate" class="text-danger"></span>
             </div>
+
         </div>
         <div class="form-group row">
             <label asp-for="MobileNumber" class="control-label col-md-2"></label>
@@ -54,35 +65,51 @@
             </div>
         </div>
         <div class="form-group row">
-             <label asp-for="ProvinceID" class="control-label col-md-2"></label>
-             <div class="col-md-4">
-                 <select asp-for="ProvinceID" class="s2" asp-items="@Model.IProvince">
-                     <option value="0">Please select one</option>
-                 </select>
-             </div>
+            <label asp-for="ProvinceID" class="control-label col-md-2"></label>
+            <div class="col-md-4">
+            <select asp-for="ProvinceID" class="s2" asp-items="@Model.IProvince">
+                <option value="0">Please select one</option>
+            </select>
+            </div>
         </div>
         <div class="form-group row">
-             <label asp-for="CityID" class="control-label col-md-2"></label>
-             <div class="col-md-4">
-                 <select asp-for="CityID" class="s2" asp-items="@Model.ICity">
-                     <option value="0">Please select one</option>
-                 </select>
-             </div>
+            <label asp-for="CityID" class="control-label col-md-2"></label>
+            <div class="col-md-4">
+            <select asp-for="CityID" class="s2" asp-items="@Model.ICity">
+                <option value="0">Please select one</option>
+            </select>
+            </div>
         </div>
         <div class="form-group row">
-             <label asp-for="ProgramID" class="control-label col-md-2"></label>
-             <div class="col-md-4">
-                 <select asp-for="ProgramID" class="s2" asp-items="@Model.IProgram">
-                     <option value="0">Please select one</option>
-                 </select>
-             </div>
+            <label asp-for="ProgramID" class="control-label col-md-2"></label>
+            <div class="col-md-4">
+            <select asp-for="ProgramID" class="s2" asp-items="@Model.IProgram">
+                <option value="0">Please select one</option>
+            </select>
+            </div>
         </div>
+        <div class="form-group">
+            <label class="control-label col-md-2"></label>
+            <div class="checkbox icheck-turquoise">
+                @Html.CheckBoxFor(model => model.IsActive)
+                @Html.LabelFor(c => c.IsActive, new { @class = "col-sm-4 control-label" })
+            </div>
+        </div>
+        <img id="myImg" src="@Url.Content(Model.PictureImageUrl)" alt="Snow" style="width:100%;max-width:300px">
+
+
+    </div>
 
     @await Html.PartialAsync("_ModalFooter", new ModalFooter { })
 </form>
-
+<script src="~/lib/bootstrap-datepicker/js/bootstrap-datepicker.min.js"></script>
 <script type="text/javascript">
     $(document).ready(function () {
+
+        $('.datepicker').datepicker({
+            format: 'mm/dd/yyyy'
+        });
+
         'use strict';
         window.addEventListener('load', function () {
             // Fetch all the forms we want to apply custom Bootstrap validation styles to
@@ -100,3 +127,4 @@
         }, false);
     })
 </script>
+<link href="~/lib/bootstrap-datepicker/css/bootstrap-datepicker.min.css" rel="stylesheet" />
