--- a/Views/StudentProfile/_DeleteStudentProfile.cshtml
+++ b/Views/StudentProfile/_DeleteStudentProfile.cshtml
@@ -1,4 +1,4 @@
-@model StudentProfile
+﻿@model StudentProfile
 
 <form asp-action="DeleteStudentProfile" role="form">
     @Html.Partial("_ModalHeader", new ModalHeader { Heading = "Delete StudentProfile" })
