--- a/Views/College/Index.cshtml
+++ b/Views/College/Index.cshtml
@@ -59,7 +59,7 @@
     <script src="~/lib/datatables/Responsive-2.2.2/js/dataTables.responsive.min.js" asp-append-version="true"></script>
     <script src="~/js/dataTables.buttons.min.js" asp-append-version="true"></script>
 
-    <script src="~/js/College-index.js" asp-append-version="true"></script>
+    <script src="~/js/College-Index.js" asp-append-version="true"></script>
     <script src="~/lib/Select2/select2.min.js"></script>
     <script src="~/lib/bootstrap-input-spinner/src/bootstrap-input-spinner.js"></script>
 
